feat(index): page created without css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,46 @@
 
 <body>
     <div class="container">
+        <div class="row header mb-2">
+            <div class="col-9 header-logo"><img class="header-logo-img" src="./assets/logo.svg"></div>
+            <div class="col-3 header-menu "><i class="fas fa-bars fa-2x"></i></div>
+        </div>
+        <div class="row sharepower mb-2">
+            <div class="col-12 gdtitre_gauche row">
+                <div class="col-1 sharepower-logo"><i class="fab fa-slideshare"></i></div>
+                <div class="col-10 sharepower-titre text-capitalize">share power</div>
+            </div>
+            <div class="col-12 sharepower-texte-titre minititre text-center">co-création</div>
+            <div class="col-12 sharepower-texte-texte ">Magna eu ea irure anim et ad qui reprehenderit ut eu ex nulla
+                culpa.</div>
+        </div>
+        <div class="row realisation mb-2">
+            <div class="col-12 gdtitre_gauche row">
+                <div class="col-1 realisation-logo"><i class="fas fa-cogs"></i></div>
+                <div class="col-10 realisation-titre text-capitalize ">réalisation</div>
+            </div>
+            <div class="col-12 realisation-caroussel-titre  minititre text-center">quelques projets</div>
+            <div class="col-12 realisation-caroussel-presentation ">Enim quis fugiat excepteur non ipsum tempor quis
+                ullamco
+                consectetur duis occaecat.</div>
+            <div class="col-12 realisation-caroussel">
+                caroussel owl
+            </div>
 
+        </div>
+        <div class="row etape mb-2">
+            <div class="col-12 gdtitre_gauche row">
+                <div class="col-1 etape-logo"><i class="fas fa-cogs"></i></div>
+                <div class="col-10 etape-titre text-capitalize ">étapes UX</div>
+            </div>
+            <div class="col-12 etape-caroussel-titre  minititre text-center">satisfaction pour fidélisation</div>
+            <div class="col-12 etape-caroussel-presentation ">Enim quis fugiat excepteur non ipsum tempor quis ullamco
+                consectetur duis occaecat.</div>
+            <div class="col-12 etape-caroussel">
+                caroussel owl
+            </div>
+
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
