feat(index): add background, css and start first chapter

--- a/index.html
+++ b/index.html
@@ -35,9 +35,21 @@
 
 <body>
     <div class="container">
-        <div class="row header mb-2">
+        <div class="row header mb-4">
             <div class="col-9 header-logo"><img class="header-logo-img" src="./assets/logo.svg"></div>
             <div class="col-3 header-menu "><i class="fas fa-bars fa-2x"></i></div>
+        </div>
+        <div class="row entreprise mb-3">
+            <div class="col-12 entreprise-presentation">
+                <h3 class="entreprise-titre">Bienvenue</h3>
+                <p class="entreprise-description">Créateur de sites webs et d'applications depuis 1998. Notre expérience
+                    est à votre service pour
+                    <span>réaliser</span> vos idées.
+                    Nous travaillons en <span>share power</span> de concert avec vous pour satisfaire vos besoins ou
+                    ceux de vos
+                    clients. Vous pouvez intéragir tout au long des <span>étapes</span> du processus de création.
+                </p>
+            </div>
         </div>
         <div class="row sharepower mb-2">
             <div class="col-12 gdtitre_gauche row">
