feat(index): first add owl with js for add comment and title

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw=="
         crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -69,8 +72,24 @@
             <div class="col-12 realisation-caroussel-presentation ">Enim quis fugiat excepteur non ipsum tempor quis
                 ullamco
                 consectetur duis occaecat.</div>
-            <div class="col-12 realisation-caroussel">
-                caroussel owl
+            <div class="realisation-caroussel-titre owl-titre">
+                <h4 class="owl-titre"></h4>
+                <h6 class="owl-comment"></h6>
+            </div>
+            <div class="col-12 realisation-caroussel owl-carousel">
+
+                <div class="item">
+                    <img src="http://malsup.github.io/images/p1.jpg" title="Title 1" alt="Alt 1" />
+                </div>
+                <div class="item">
+                    <img src="http://malsup.github.io/images/p2.jpg" title="Title 2" alt="Alt 2" />
+                </div>
+                <div class="item">
+                    <img src="http://malsup.github.io/images/p3.jpg" title="Title 3" alt="Alt 3" />
+                </div>
+                <div class="item">
+                    <img src="http://malsup.github.io/images/p4.jpg" title="Title 4" alt="Alt 4" />
+                </div>
             </div>
 
         </div>
@@ -80,7 +99,8 @@
                 <div class="col-10 etape-titre text-capitalize ">étapes UX</div>
             </div>
             <div class="col-12 etape-caroussel-titre  minititre text-center">satisfaction pour fidélisation</div>
-            <div class="col-12 etape-caroussel-presentation ">Enim quis fugiat excepteur non ipsum tempor quis ullamco
+            <div class="col-12 etape-caroussel-presentation ">Enim quis fugiat excepteur non ipsum tempor quis
+                ullamco
                 consectetur duis occaecat.</div>
             <div class="col-12 etape-caroussel">
                 caroussel owl
@@ -95,6 +115,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
         </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="./js/index.js"></script>
     <script>
 
