--- a/index.html
+++ b/index.html
@@ -73,22 +73,23 @@
                 ullamco
                 consectetur duis occaecat.</div>
             <div class="realisation-caroussel-titre owl-titre">
-                <h4 class="owl-titre"></h4>
+                <h5 class="owl-titre"></h5>
                 <h6 class="owl-comment"></h6>
             </div>
             <div class="col-12 realisation-caroussel owl-carousel">
 
                 <div class="item">
-                    <img src="http://malsup.github.io/images/p1.jpg" title="Title 1" alt="Alt 1" />
+                    <img src="./assets/ferme2.png" title="Site web" alt="Site marchand avec administration" />
                 </div>
                 <div class="item">
-                    <img src="http://malsup.github.io/images/p2.jpg" title="Title 2" alt="Alt 2" />
+                    <img src="./assets/formidrive.jpg" title="Application en python" alt="Calcul volume sur photos" />
                 </div>
                 <div class="item">
-                    <img src="http://malsup.github.io/images/p3.jpg" title="Title 3" alt="Alt 3" />
+                    <img src="./assets/montifaud1.png" title="Site web" alt="Automatisation du back-end" />
                 </div>
                 <div class="item">
-                    <img src="http://malsup.github.io/images/p4.jpg" title="Title 4" alt="Alt 4" />
+                    <img src="./assets/crypto.jpg" title="Application en ReactJs"
+                        alt="Robot d'achat et vente avec API REST" />
                 </div>
             </div>
 
@@ -104,6 +105,20 @@
                 consectetur duis occaecat.</div>
             <div class="col-12 etape-caroussel">
                 caroussel owl
+            </div>
+
+        </div>
+        <div class="row footer">
+            <div class="col-8 footer-contact">
+                <dl>
+                    <dt>Cadot Michaël & Théo</dt>
+                    <dt>17700 St Mard</dt>
+                    <dt>06.29.95.00.45</dt>
+                </dl>
+            </div>
+            <div class="col-4 footer-icones">
+                <i class="fab fa-linkedin fa-2x"></i>
+                <i class="fas fa-envelope fa-2x   "></i>
             </div>
 
         </div>
