feat(index): start carousel for ux, modify autoplay for him

--- a/index.html
+++ b/index.html
@@ -69,15 +69,16 @@
                 <div class="col-10 realisation-titre text-capitalize ">réalisation</div>
             </div>
             <div class="col-12 realisation-caroussel-titre  minititre text-center">quelques projets</div>
-            <div class="col-12 realisation-caroussel-presentation ">Enim quis fugiat excepteur non ipsum tempor quis
-                ullamco
-                consectetur duis occaecat.</div>
+            <div class="col-12 realisation-caroussel-presentation ">Des projets réalisés d'applications, de sites webs,
+                de robots et
+                d'automatisation pour nos clients.
+                <hr>
+            </div>
             <div class="realisation-caroussel-titre owl-titre">
                 <h5 class="owl-titre"></h5>
                 <h6 class="owl-comment"></h6>
             </div>
             <div class="col-12 realisation-caroussel owl-carousel">
-
                 <div class="item">
                     <img src="./assets/ferme2.png" title="Site web" alt="Site marchand avec administration" />
                 </div>
@@ -92,7 +93,6 @@
                         alt="Robot d'achat et vente avec API REST" />
                 </div>
             </div>
-
         </div>
         <div class="row etape mb-2">
             <div class="col-12 gdtitre_gauche row">
@@ -100,11 +100,35 @@
                 <div class="col-10 etape-titre text-capitalize ">étapes UX</div>
             </div>
             <div class="col-12 etape-caroussel-titre  minititre text-center">satisfaction pour fidélisation</div>
-            <div class="col-12 etape-caroussel-presentation ">Enim quis fugiat excepteur non ipsum tempor quis
-                ullamco
-                consectetur duis occaecat.</div>
-            <div class="col-12 etape-caroussel">
-                caroussel owl
+            <div class="col-12 etape-caroussel-presentation ">Les étapes de conception permettent de définir le
+                besoin,
+                les points d'attention, trouver des solutions UX et préparer le travail pour la réalisation ou choix
+                du
+                template.<br>Nos clients peuvent suivre en temps réel les avancées sur chaque tâche, intervenir et
+                particper à la conception.
+                <hr>
+            </div>
+            <div class="etape-caroussel-titre owl-titre">
+                <h5 class="owl-titre">Personas</h5>
+                <h6 class="owl-comment">1/5 Visiteurs ou clients types</h6>
+            </div>
+            <div class="col-12 etape-caroussel owl-carousel">
+                <div class="item">
+                    <img class="etape-caroussel-miniature" src="./assets/ux1.png" title="Personas"
+                        alt="1/5 Visiteurs ou clients types" />
+                    Les personas nous renseignent sur leurs envies, leurs besoins, leurs peurs, ce qu'ils attendent,
+                    leurs compétences à l'utilisation de l'outil. Les définir permet de mieux les connaitres et être
+                    plus près de leurs attentes en utilisant l'outil.
+
+                </div>
+                <div class="item">
+                    <img class="etape-caroussel-miniature" src="./assets/ux2.png" title="Parcours utilisateurs"
+                        alt="2/5 trouver les besoins et proposer" />
+                    Le parcours utilisateurs va nous permettre de réfléchir à comment les utilisateurs viennent chercher
+                    l'information. C'est une méthode qui nous aide également à réfléchir sur les possibilités pour leurs
+                    proposer des expériences utilisateurs qui les fidéliseront en prenant soin d'eux.
+
+                </div>
             </div>
 
         </div>
