feat(index): add assets, adjust owl-nav

--- a/index.html
+++ b/index.html
@@ -123,10 +123,35 @@
                 </div>
                 <div class="item">
                     <img class="etape-caroussel-miniature" src="./assets/ux2.png" title="Parcours utilisateurs"
-                        alt="2/5 trouver les besoins et proposer" />
+                        alt="2/5 Trouver les besoins et proposer" />
                     Le parcours utilisateurs va nous permettre de réfléchir à comment les utilisateurs viennent chercher
                     l'information. C'est une méthode qui nous aide également à réfléchir sur les possibilités pour leurs
                     proposer des expériences utilisateurs qui les fidéliseront en prenant soin d'eux.
+
+                </div>
+                <div class="item">
+                    <img class="etape-caroussel-miniature" src="./assets/ux3.png" title="Interface utilisateur"
+                        alt="3/5 Définir les espaces" />
+                    Suite aux parcours, nous avons les parties du site à mettre en place afin de permetre un accès
+                    rapide en 3 cliques maximums. On met également dans ces zones, les éléménts indispensable à la
+                    communication et l'image de l'entreprise. On cré pour cela des zonings, wireframes et maquettes hd.
+
+                </div>
+                <div class="item">
+                    <img class="etape-caroussel-miniature" src="./assets/ux4.png" title="Tests utilisateurs"
+                        alt="4/5 Tester l'interface" />
+                    Par les test utilisateurs, il est possible de savoir si les étapes précédentes permettent rapidement
+                    et simplement de trouver les élements et voir les informations. C'est une étape importante, qui va
+                    permettre d'ajuster, modifier certaines zones en fonction de tests réels avec les utilisateurs.
+
+                </div>
+                <div class="item">
+                    <img class="etape-caroussel-miniature" src="./assets/ux5.png" title="Intégration et administration"
+                        alt="5/5 Animation et ergonomie" />
+                    L'intégration est le moment idéal pour s'interroger sur les animations pour mettre en valeurs
+                    certains éléments, pour guider l'utilisateur et pour l'informer de validations ou de problèmes qui
+                    peuvent avoir lieu sur le back-end. Les animmations permettent également dans un espace restreint
+                    d'afficher plus d'informations, ajouter des annotations ou informer sur les étapes suivantes.
 
                 </div>
             </div>
