feat(header): limit height of logo

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <body>
     <div class="container">
         <div class="row header mb-4">
-            <div class="col-9 header-logo"><img class="header-logo-img" src="./assets/logo.svg"></div>
-            <div class="col-3 header-menu "><i class="fas fa-bars fa-2x"></i></div>
+            <div class="col-9 col-md-10 header-logo"><img class="header-logo-img" src="./assets/logo.svg"></div>
+            <div class="col-3 col-md-2 header-menu "><i class="fas fa-bars fa-2x"></i></div>
         </div>
         <div class="row entreprise mb-3">
             <div class="col-12 entreprise-presentation">
