feat(header): ajout du texte share power

--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
                 <div class="col-10 sharepower-titre text-capitalize">share power</div>
             </div>
             <div class="col-12 sharepower-texte-titre minititre text-center">co-création</div>
-            <div class="col-12 sharepower-texte-texte ">Magna eu ea irure anim et ad qui reprehenderit ut eu ex nulla
-                culpa.</div>
+            <div class="col-12 sharepower-texte-texte ">Afin de réaliser un site pour vos clients avec vos attentes,
+                nous avons utilisons le share power. Ce processus vous permet d'intervenir tout au long de réalisation,
+                conçue étape par étape, sur les moindre détails de la conception de l'interface graphique.
+                L'administration n'est pas en reste et pendant son codage, notre équipe échange avec vous,
+                régulièrement, sur les possibiltés offertes. </div>
         </div>
         <div class="row realisation mb-2">
             <div class="col-12 gdtitre_gauche row">
