feat(index): bug col not defined

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 d'automatisation pour nos clients.
                 <hr>
             </div>
-            <div class="realisation-caroussel-titre owl-titre">
+            <div class="col-12 realisation-caroussel-titre owl-titre">
                 <h5 class="owl-titre"></h5>
                 <h6 class="owl-comment"></h6>
             </div>
