--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                 d'automatisation pour nos clients.
                 <hr>
             </div>
-            <div class="col-12 realisation-caroussel-titre owl-titre">
+            <div class="col-12 col-md-12 realisation-caroussel-titre owl-titre">
                 <h5 class="owl-titre"></h5>
                 <h6 class="owl-comment"></h6>
             </div>
-            <div class="col-12 realisation-caroussel owl-carousel">
+            <div class="col-12 col-md-8 realisation-caroussel owl-carousel mx-auto">
                 <div class="item">
                     <img src="./assets/ferme2.png" title="Site web" alt="Site marchand avec administration" />
                 </div>
