feat(index): reduce width owl

--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
                 <div class="col-1 etape-logo"><i class="fas fa-cogs"></i></div>
                 <div class="col-10 etape-titre text-capitalize ">étapes UX</div>
             </div>
-            <div class="col-12 etape-caroussel-titre  minititre text-center">satisfaction pour fidélisation</div>
-            <div class="col-12 etape-caroussel-presentation ">Les étapes de conception permettent de définir le
+            <div class="col-12 etape-caroussel-titre  minititre text-center">satisfaction pour fidélisation
+            </div>
+            <div class="col-12 etape-caroussel-etape ">Les étapes de conception permettent de définir le
                 besoin,
                 les points d'attention, trouver des solutions UX et préparer le travail pour la réalisation ou choix
                 du
@@ -115,9 +116,9 @@
                 <h5 class="owl-titre">Personas</h5>
                 <h6 class="owl-comment">1/5 Visiteurs ou clients types</h6>
             </div>
-            <div class="col-12 etape-caroussel owl-carousel">
+            <div class="col-12 col-md-10 mx-auto etape-caroussel owl-carousel">
                 <div class="item">
-                    <img class="etape-caroussel-miniature" src="./assets/ux1.png" title="Personas"
+                    <img class="etape-caroussel-miniature img-fluid" src="./assets/ux1.png" title="Personas"
                         alt="1/5 Visiteurs ou clients types" />
                     Les personas nous renseignent sur leurs envies, leurs besoins, leurs peurs, ce qu'ils attendent,
                     leurs compétences à l'utilisation de l'outil. Les définir permet de mieux les connaitres et être
