fix(index): size col etape owl

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 particper à la conception.
                 <hr>
             </div>
-            <div class="etape-caroussel-titre owl-titre">
+            <div class="col-12 etape-caroussel-titre owl-titre">
                 <h5 class="owl-titre">Personas</h5>
                 <h6 class="owl-comment">1/5 Visiteurs ou clients types</h6>
             </div>
