feat(index): adjust center of icons

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
 
         </div>
-        <div class="row footer">
+        <div class="row align-items-center footer ">
             <div class="col-8 footer-contact">
                 <dl>
                     <dt>Cadot Michaël & Théo</dt>
@@ -169,7 +169,7 @@
                     <dt>06.29.95.00.45</dt>
                 </dl>
             </div>
-            <div class="col-4 footer-icones">
+            <div class="col-4 footer-icones ">
                 <i class="fab fa-linkedin fa-2x"></i>
                 <i class="fas fa-envelope fa-2x   "></i>
             </div>
