feat(index): add background and adjust space vertically

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
 
         </div>
-        <div class="row align-items-center footer ">
+        <div class="row align-items-center footer mt-5 mb-2">
             <div class="col-8 footer-contact">
                 <dl>
                     <dt>Cadot Michaël & Théo</dt>
