feat(index): separate header

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <title>Cadot.info</title>
 </head>
 
-<body>
+<body class="entete">
     <div class="container">
         <div class="row header mb-4">
             <div class="col-9 col-md-10 header-logo"><img class="header-logo-img" src="./assets/logo.svg"></div>
@@ -199,8 +199,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
                 </div>
             </div>
         </div>
