fix(index): add point cla enteter

--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
     </button>
 
     <!-- Modal -->
-    <div class="modal fade" id="pub" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+    <div class="modal fade " id="pub" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header entete">
                     <h5 class="modal-title">Les évènements nationaux</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
