feat(modal):finish template

--- a/index.html
+++ b/index.html
@@ -178,23 +178,69 @@
     </div>
 
 
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modelId">
-        Launch
-    </button>
 
     <!-- Modal -->
     <div class="modal fade " id="pub" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header entete">
-                    <h5 class="modal-title">Les évènements nationaux</h5>
+            <div class="modal-content entete">
+                <div class="modal-header ">
+                    <h5 class="modal-title gdtitre_gauche col-12">Les évènements nationaux</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
                     <div class="container-fluid">
+                        <h1 class="modal-titre">Exposition anuelle</h1>
+                        <div class="card-deck">
+                            <div class="card">
+                                <img class="card-img-top img-thumbnail" src="https://picsum.photos/id/1020/600/400"
+                                    alt="">
+                                <div class="card-body">
+                                    <h4 class="card-title minititre">L'ours</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                        Reiciendis asperiores natus tenetur cumque expedita ipsam placeat molestias
+                                        ducimus, laborum rerum voluptatum repudiandae commodi hic voluptate
+                                        reprehenderit quas quod deleniti laboriosam?</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img class="card-img-top" src="https://picsum.photos/id/1045/600/400" alt="">
+                                <div class="card-body">
+                                    <h4 class="card-title minititre">La montagne</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque,
+                                        omnis ipsam. Nesciunt ea sint atque fugiat in laudantium nulla minima magni
+                                        sapiente et, aliquam, eaque, vel optio porro explicabo natus?</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mt-2">
+                            <div class="col-12 col-md-4 col-xl-2 text-right">
+                                <h4 class="card-title minititre">Les prochains lieux:</h4>
+                                <dl>
+                                    <dt>Hendaye le 12 mars 2021</dt>
+                                    <dt>St Malo le 14 mars 2021</dt>
+                                    <dt>Lorient le 12 acril 2021</dt>
+                                </dl>
+                            </div>
+                            <div class="col-12 col-md-8 col-xl-10">
+
+                                <img class="img-fluid img-thumbnail" id="carte"
+                                    src="https://nouvelle-techno.fr/assets/img/uploads/osm_markers.png">
+                            </div>
+                        </div>
+                        <div class="card">
+
+                            <div class="card-body">
+                                <div class="alert alert-primary" role="alert">
+                                    <strong>Pensez à vous inscrire rapidement les places sont limitées</strong>
+                                </div>
+                            </div>
+                            <div class="card-footer text-muted">
+                                <i class="fas fa-phone    "></i> Vous pouvez nous contacter pour tout renseignements au
+                                01.23.43.54.65
+                            </div>
+                        </div>
 
                     </div>
                 </div>
